--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     <meta name="theme-color" content="#ffffff" />
     <!-- font -->
     <link rel="stylesheet" href="./assets/fonts/stylesheet.css" />
+    <!-- Styles -->
+    <link rel="stylesheet" href="./assets/css/main.css" />
   </head>
   <body>
     <h1>hello worl</h1>
