--- a/index.html
+++ b/index.html
@@ -35,8 +35,22 @@
     <link rel="stylesheet" href="./assets/fonts/stylesheet.css" />
     <!-- Styles -->
     <link rel="stylesheet" href="./assets/css/main.css" />
+    <script src="./assets/js/scripts.js"></script>
   </head>
   <body>
+    <!-- Header -->
+    <header id="header"></header>
+    <script>
+      load("#header", "./template/header.html");
+    </script>
+
+    <!-- Main -->
     <h1>hello worl</h1>
+
+    <!-- Footer -->
+    <footer id="footer"></footer>
+    <script>
+      load("#footer", "./template/footer.html");
+    </script>
   </body>
 </html>
