--- a/sign-up.html
+++ b/sign-up.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Grocery Mart</title>
+    <title>Sign up | Grocery Mart</title>
 
     <!-- Favicon -->
     <link
@@ -37,21 +37,19 @@
     <script src="./assets/js/scripts.js"></script>
   </head>
   <body>
-    <div class="container">
-      <!-- Header -->
-      <header id="header"></header>
-      <script>
-        load("#header", "./template/header.html");
-      </script>
+    <!-- Header -->
+    <header id="header"></header>
+    <script>
+      load("#header", "./template/header.html");
+    </script>
 
-      <!-- Main -->
-      <h1>Home page</h1>
+    <!-- Main -->
+    <h1>Sign up page</h1>
 
-      <!-- Footer -->
-      <footer id="footer"></footer>
-      <script>
-        load("#footer", "./template/footer.html");
-      </script>
-    </div>
+    <!-- Footer -->
+    <footer id="footer"></footer>
+    <script>
+      load("#footer", "./template/footer.html");
+    </script>
   </body>
 </html>
